Fix bug where card elements sometimes couldnt drag due to layout shift from drop zones showing up

--- a/inst/editor/src/Shiny-Ui-Elements/BslibCards/styles.module.css
+++ b/inst/editor/src/Shiny-Ui-Elements/BslibCards/styles.module.css
@@ -42,12 +42,8 @@
 }
 
 .drop_watcher:global(.can-accept-drop) {
-  height: 15px;
   color: var(--rstudio-white);
-}
-
-.missing_card_element.card_body > .drop_watcher {
-  height: 100%;
+  height: 15px;
 }
 
 .missing_card_element:not(:has(:global(.can-accept-drop))) {
@@ -59,6 +55,14 @@
 
 .missing_card_element:has(:global(.can-accept-drop)) {
   height: auto;
+}
+
+.drop_watcher:global(.can-accept-drop),
+.missing_card_element:has(:global(.can-accept-drop)) {
+  /* Add subtle transition to ease jarring layout transition */
+  transition-property: height flex-grow flex;
+  transition-duration: 0.1s;
+  transition-timing-function: ease-in;
 }
 
 .card_body > div:global(.can-accept-drop.hovering-over)::after {
